--- a/msp/lecture_notes/technical_notes_1_20250424.sty
+++ b/msp/lecture_notes/technical_notes_1_20250424.sty
@@ -71,6 +71,8 @@
   {Proposition}{Proposition}{theostyle}{theo}
 \NewTcbTheorem[use counter from=Definition,crefname={corollary}{corollaries}]%
   {Corollary}{Corollary}{theostyle}{cor}
+\NewTcbTheorem[use counter from=Definition,crefname={lemma}{lemmas}]%
+  {Lemma}{Lemma}{theostyle}{lem}
 \NewTcbTheorem[use counter from=Definition,crefname={example}{examples}]%
   {Example}{Example}{egstyle}{eg}
 
